--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-schedule": "^2.1.0",
     "openai": "^2.0.2",
     "openai-api": "^1.2.6",
     "twit": "^2.2.11",
